--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   data-assets-path="assets/"
   data-template="vertical-menu-template-no-customizer">
   <head>
-    <meta http-equiv="refresh" content="0; URL=/html/horizontal-menu-template/index.html" />
+    <meta http-equiv="refresh" content="0; URL=/html/vertical-menu-template" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
